idf_component_register(SRCS "app_nvs.c" "http_server.c" "wifi_app.c" "main.c" "rgb_led.c" "wifi_app.c" "http_server.c" "DHT22.c" "app_nvs.c"
                    INCLUDE_DIRS "."
                    EMBED_FILES webpage/app.css webpage/app.js webpage/index.html webpage/favicon.ico webpage/jquery-3.3.1.min.js)  

